--- a/ExpenseTracker/Views/Category/AddOrEdit.cshtml
+++ b/ExpenseTracker/Views/Category/AddOrEdit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ExpenseTracker.Models.Category
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["PageTitle"] = Model.CategoryId==0  ? "Create a new category" : "Edit category";
 }
 
 
@@ -10,12 +10,12 @@
         <div class="widget p-5">
             <form asp-action="AddOrEdit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" name="CategoryId" value="CategoryId" />
+                <input type="hidden" name="CategoryId" value="@Model.CategoryId" />
                 <div class="mb-3">
                     <div class='e-btn-group custom-rbt-group'>
                         <input type="radio" id="radioleft" name="Type" value="Expense" checked="@(Model.Type=="Expense")" />
                         <label class="e-btn" for="radioleft">Expense</label>
-                        <input type="radio" id="radiomiddle" name="Type" value="Income" checked="@(Model.Type=="Expense")" />
+                        <input type="radio" id="radiomiddle" name="Type" value="Income" checked="@(Model.Type=="Income")" />
                         <label class="e-btn" for="radiomiddle">Income</label>
 
                     </div>
