--- a/ExpenseTracker/Views/Shared/_Layout.cshtml
+++ b/ExpenseTracker/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ExpenseTracker</title>
+    <title>ExpenseTracker</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 
     <!-- Syncfusion ASP.NET Core controls styles -->
@@ -44,6 +44,27 @@
         <div class="row justify-content-center">
             <div class="col-md-10">
                 <main role="main" class="pb-3">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="d-flex flex-column mb-5">
+                                <div class="d-flex mb-1">
+                                    <div class="flex-grow-1"><h3 class="fw-bold">@ViewData["PageTitle"]</h3></div>
+                                    <div>
+                                        @if (@ViewData["PageActionText"] != null)
+                                        {
+                                            <a class="btn btn-dark" href="@ViewData["PageActionUrl"]">
+                                                @ViewData["PageActionText"]
+                                            </a>
+                                        }
+                                    </div>
+                                </div>
+                                @*Breadcrum*@
+                                <ejs-breadcrumb id="default">
+                                </ejs-breadcrumb>
+                            </div>
+                        </div>
+
+                    </div>
                     @RenderBody()
                 </main>
             </div>
