--- a/ExpenseTracker/Views/Shared/_Layout.cshtml
+++ b/ExpenseTracker/Views/Shared/_Layout.cshtml
@@ -19,6 +19,8 @@
 
 </head>
 <body class="e-bigger">
+    <partial name="_SideBar" />
+
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -40,42 +42,53 @@
             </div>
         </nav>
     </header>
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-10">
-                <main role="main" class="pb-3">
-                    <div class="row">
-                        <div class="col-md-7">
-                            <div class="d-flex flex-column mb-5">
-                                <div class="d-flex mb-1">
-                                    <div class="flex-grow-1"><h3 class="fw-bold">@ViewData["PageTitle"]</h3></div>
-                                    <div>
-                                        @if (@ViewData["PageActionText"] != null)
-                                        {
-                                            <a class="btn btn-dark" href="@ViewData["PageActionUrl"]">
-                                                @ViewData["PageActionText"]
-                                            </a>
-                                        }
+    <div class="main-content">
+        <div class="container mt-5">
+            <div class="row justify-content-center">
+                <div class="@(ViewData[" isDashboard"] == null ? "col-md-10" : "col-md-12")">
+                    <main role="main" class="pb-3">
+                        @if (ViewData["isDashboard"] == null)
+                        {
+                              <div class="row">
+                            <div class="col-md-7">
+                                <div class="d-flex flex-column mb-5">
+                                    <div class="d-flex mb-1">
+                                        <div class="flex-grow-1"><h3 class="fw-bold">@ViewData["PageTitle"]</h3></div>
+                                        <div>
+                                            @if (@ViewData["PageActionText"] != null)
+                                            {
+                                                <a class="btn btn-dark" href="@ViewData["PageActionUrl"]">
+                                                    @ViewData["PageActionText"]
+                                                </a>
+                                            }
+                                        </div>
                                     </div>
+                                    @*Breadcrum*@
+                                    <ejs-breadcrumb id="default">
+                                    </ejs-breadcrumb>
                                 </div>
-                                @*Breadcrum*@
-                                <ejs-breadcrumb id="default">
-                                </ejs-breadcrumb>
                             </div>
-                        </div>
 
-                    </div>
-                    @RenderBody()
-                </main>
+                        </div>
+                        }
+                      
+                        @RenderBody()
+                    </main>
+                </div>
             </div>
         </div>
     </div>
+ 
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - ExpenseTracker - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+    <div class="footer-content">
+        <footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; 2023 - ExpenseTracker - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+        </footer>
+    </div>
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
