--- a/ExpenseTracker/Views/Transaction/AddOrEdit.cshtml
+++ b/ExpenseTracker/Views/Transaction/AddOrEdit.cshtml
@@ -13,13 +13,14 @@
 
                 <div class="mb-3">
                     <ejs-datepicker id="date" ejs-for="Date" placeholder="Date" floatLabelType="Auto" format="MMM-dd-yyyy"></ejs-datepicker>
-                    <span asp-validation-for="Date" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
                     <ejs-dropdownlist id="ddlCategory" ejs-for="CategoryId" dataSource="@ViewBag.Categories" placeholder="Category" floatLabelType="Always" 
                     allowFiltering="true" ignoreAccent="true" filterType="Contains" popupHeight="220px">
                         <e-dropdownlist-fields value="CategoryId" text="TitleWithIcon"></e-dropdownlist-fields>
                     </ejs-dropdownlist>
+                    <span asp-validation-for="CategoryId" class="text-danger"></span>
+
                 </div>
                 <div class="mb-3">
                     <ejs-numerictextbox id="amount" ejs-for="Amount" placeholder="Amount" floatLabelType="Always" min=0 format="c0"></ejs-numerictextbox>
@@ -27,7 +28,6 @@
                 </div>
                 <div class="mb-3">
                     <ejs-textbox id="Note" placeholder="Note" ejs-for="Note" floatLabelType="Always" multiline></ejs-textbox>
-                    <span asp-validation-for="Note" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
                     <ejs-button id="submit" type="submit" content="Submit" cssClass="e-success"></ejs-button>
@@ -42,7 +42,8 @@
     </div>
 </div>
 
-
+@*
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+*@
