--- a/ExpenseTracker/Views/Transaction/Index.cshtml
+++ b/ExpenseTracker/Views/Transaction/Index.cshtml
@@ -6,7 +6,7 @@
     ViewData["PageActionUrl"] = "/Transaction/AddOrEdit";
 }
 
-<table class="table">
+@*<table class="table">
     <thead>
         <tr>
             <th>
@@ -47,4 +47,39 @@
         </tr>
 }
     </tbody>
-</table>
+</table>*@
+
+<div class="row">
+    <div class="col-md-7">
+        <ejs-grid id="transactions" dataSource="@Model" gridLines="None" allowSorting="true" allowPaging="true">
+            <e-grid-pagesettings pageSize="10"></e-grid-pagesettings>
+            <e-grid-columns>
+                <e-grid-column headerText="Category" field="categoryTitleWithIcon"></e-grid-column>
+                <e-grid-column headerText="Date" field="Date" type="date" format="MMM-dd-yyyy" textAlign="Left" width="110px"></e-grid-column>
+                <e-grid-column headerText="Amount" field="formattedAmount" textAlign="Right" width="110px"></e-grid-column>
+                <e-grid-column headerText="Actions" template="#actionsColumnTemplate" width="100px"></e-grid-column>
+            </e-grid-columns>
+        </ejs-grid>
+    </div>
+
+    <div class="col-md-5">
+        <div class="widget h-100 d-flex justify-content-center align-items-center">
+            <i class="fa-solid fa-shapes fa-beat-fade fa-2xl"></i>
+        </div>
+    </div>
+</div>
+
+<script id="actionsColumnTemplate" type="text/x-template">
+    <div class="d-flex flex-row justify-content-start">
+        <a class="btn btn-sm" href="/Transaction/AddOrEdit/${TransactionId}">
+            <i class="fa-solid fa-pen " style="color: #ffffff;"></i>
+        </a>
+        <form action="/Transaction/Delete/${TransactionId}" method="post">
+    @Html.AntiForgeryToken()
+                <button type="submit" class="btn btn-sm btn-link no-a-decoration"
+                onclick="return confirm(&quot; Are you sure to delete this record? &quot;)">
+                  <i class="fa-solid fa-trash-can fa-lg text-danger" ></i>
+            </button>
+        </form>
+    </div>
+</script>
